--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3135,6 +3135,9 @@ ul.faces li p {
     .display-none {
         display: none;
     }
+    .nutrition {
+        content: url("../../images/nutrition1edit.jpg");
+    }
 }
 
 /* Table */
